fixed navigation spacing

--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -17,6 +17,12 @@ header{
 	}
 }
 
+#navigation{
+	@media only screen and (max-width: 1139px){
+		margin-top: $medium;
+	}
+}
+
 .nav{
 	list-style: none;
 	list-style-image: none;
